2005/02/21 Jamal James <teflon114@gmail.com>
* Added code to deny MKD of a dir thats already nuked
* Added 2 setings to zipscript.conf
  #only allow files found in the sfv file [true/false]
  sfv.restrict.files=true
  #allow multiple sfv files in one dir [true/false]
  allow.multi.sfv=false

2005/02/13 Matt Zimmerman <zubov@users.sourceforge.net>
* Updated perms.conf.dist to reflect login_prompt and secure(SSL/TLS)
* Login statistics now work properly
* RC2 released

2005/02/12 Jamal James <teflon114@gmail.com>
* Fixed SiteBot bug where it would not respond to any commands after site reload
* Created permissions for irc commands to irc.conf
  This code created a bug which I can't seem to figure out. /me calls upon the mighty mog & zubov
  After doing site reload, IrcConfig.reload() locks irc.conf from being edited by another application
   even though I close the file. I'm stumped. 
* Changed every IRC plugin to utilize the new permissions code
* !help command will now only show commands that the user has permission to use
* Added nostatsup and nostatsdn to perms.conf to prevent updating stats under a path
* Fixed site ginfo error "Java.lang.Long"
* Added More SiteBot plugins:
   Credits written by me
   Rank ported from 1.1.4 written by Kolor
   Request ported from 1.1.4 written by Kolor

2005/02/10 Matt Zimmerman <zubov@users.sourceforge.net>
* site user should display all user information
* converting users from 1.1.4 should convert all information

2005/02/07 Matt Zimmerman <zubov@users.sourceforge.net>
* pasv_addr now a setting in perms.conf for PASV connections to the master (LIST)
* pasv_addr now a setting for slave configurations, site slave slavename set pasv_addr 1.1.1.1
* Both are for use when your master/slave do not report the correct ip for PASV connections

2005/02/06 Matt Zimmerman <zubov@users.sourceforge.net>
* I dare you to get "the SSL bug" again, http://sourceforge.net/tracker/index.php?func=detail&aid=997540&group_id=56385&atid=480372
